--- a/src/main/webapp/resources/static/css/login.css
+++ b/src/main/webapp/resources/static/css/login.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *,
 *:before,
 *:after{
@@ -28,7 +29,7 @@ body{
             #db4f4f
     );
     left: -80px;
-    top: -150px;
+    top: -80px;
 }
 .shape:last-child{
     background: linear-gradient(
@@ -36,11 +37,11 @@ body{
             #db4f4f,
             #a12c2f
     );
-    right: -60px;
-    bottom: -150px;
+    right: -30px;
+    bottom: -80px;
 }
 form{
-    height: 640px;
+    height: 520px;
     width: 400px;
     background-color: rgba(255,255,255,0.13);
     position: absolute;
@@ -66,10 +67,38 @@ form h3{
     line-height: 42px;
     text-align: center;
 }
+form-small{
+    margin-top: 320px;
+    height: 80px;
+    width: 400px;
+    background-color: rgba(255,255,255,0.13);
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255,255,255,0.1);
+    box-shadow: 0 0 40px rgba(8,7,16,0.6);
+    padding: 25px;
+}
 
+form-small *{
+    font-family: 'Poppins',sans-serif;
+    color: #ffffff;
+    letter-spacing: 0.5px;
+    outline: none;
+    border: none;
+}
+form-small h3{
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 42px;
+    text-align: center;
+}
 label{
     display: block;
-    margin-top: 5px;
+    margin-top: 30px;
     font-size: 16px;
     font-weight: 500;
 }
@@ -80,7 +109,7 @@ input{
     background-color: rgba(255,255,255,0.07);
     border-radius: 3px;
     padding: 0 10px;
-    margin-top: 5px;
+    margin-top: 8px;
     font-size: 14px;
     font-weight: 300;
 }
@@ -89,6 +118,18 @@ input{
 }
 button{
     margin-top: 50px;
+    width: 100%;
+    background-color: #ffffff;
+    color: #080710;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+}
+button-register{
+    margin-bottom: 10px;
+    margin-left: 5px;
     width: 100%;
     background-color: #ffffff;
     color: #080710;
