--- a/src/main/webapp/resources/static/css/mainpage.css
+++ b/src/main/webapp/resources/static/css/mainpage.css
@@ -1,4 +1,4 @@
-
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, div
