--- a/src/main/webapp/resources/static/css/signup.css
+++ b/src/main/webapp/resources/static/css/signup.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *,
 *:before,
 *:after{
@@ -28,7 +29,7 @@ body{
             #db4f4f
     );
     left: -80px;
-    top: -80px;
+    top: -150px;
 }
 .shape:last-child{
     background: linear-gradient(
@@ -36,11 +37,11 @@ body{
             #db4f4f,
             #a12c2f
     );
-    right: -30px;
-    bottom: -80px;
+    right: -60px;
+    bottom: -150px;
 }
 form{
-    height: 520px;
+    height: 640px;
     width: 400px;
     background-color: rgba(255,255,255,0.13);
     position: absolute;
@@ -69,7 +70,7 @@ form h3{
 
 label{
     display: block;
-    margin-top: 30px;
+    margin-top: 5px;
     font-size: 16px;
     font-weight: 500;
 }
@@ -80,7 +81,7 @@ input{
     background-color: rgba(255,255,255,0.07);
     border-radius: 3px;
     padding: 0 10px;
-    margin-top: 8px;
+    margin-top: 5px;
     font-size: 14px;
     font-weight: 300;
 }
