review files updated

--- a/src/main/webapp/jsp/review.css
+++ b/src/main/webapp/jsp/review.css
@@ -159,5 +159,12 @@ body {
     width: 80%;
 }
 
-
+#addReview, editReview, dialog{
+    background-color: #fff;
+    border-radius: 18px;
+    box-shadow: 1px 1px 8px 0 grey;
+    height: auto;
+    margin-bottom: 20px;
+    padding: 20px 0 20px 50px;
+}
 /* End */
