--- a/src/main/webapp/resources/static/css/postDetails.css
+++ b/src/main/webapp/resources/static/css/postDetails.css
@@ -67,3 +67,61 @@
     background-color: #a12c2f;
     color: white;
 }
+.card-bounce {
+    animation-name: bounce;
+    transform-origin: center bottom;
+    animation-duration: 5s;
+    animation-fill-mode: both;
+    animation-iteration-count:infinite;
+}
+
+/*@keyframes bounce {
+	20%,
+	53%,
+	to {
+		animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+		transform: translateY(0);
+	}
+	40%,
+	43% {
+		animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+		transform: translateY(-10px);
+	}
+	70% {
+		animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+		transform: translateY(-5px);
+	}
+	80% {
+		transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+		transform: translateY(0);
+	}
+	90% {
+		transform: translateY(-2px);
+	}
+}
+*/
+
+@keyframes bounce {
+    4%,
+    10.6%{
+        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+        transform: translateY(0);
+    }
+    8%,
+    8.6% {
+        animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        transform: translateY(-10px) /*scaleY(1.1)*/;
+    }
+    14% {
+        animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+        transform: translateY(-5px) /*scaleY(1.05)*/;
+    }
+    16% {
+        transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+        transform: translateY(0) /*scaleY(0.95)*/;
+    }
+    18%, 100% {
+        transform: translateY(-2px) /*scaleY(1.02)*/;
+    }
+
+}
